traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:41: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalDiagonal:44: error: expected start of definition
	override def forward()  {
                 ^TraversalDiagonal:47: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalDiagonal:50: error: expected start of definition
	override def backward() {
                 ^TraversalDiagonal:53: error: Unmatched closing brace '}' ignored here
}
^